--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="./css/about.css">
 
+<link rel="icon" type="image/png" href="./images/favicon-32x32.png">
 <title>InfoHub</title>
 
 <nav>
