--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
     <title>InfoHub</title>
     <link rel="stylesheet" href="./css/weather.css">
       
