--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
-    <title>InfoHub</title>
+    <title>InfoHub Weather</title>
     <link rel="stylesheet" href="./css/weather.css">
       
   </head>
