--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./css/news.css">
 
 <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
-<title>InfoHub</title>
+<title>InfoHub News</title>
 
 <!-- Inside the "About" page HTML -->
 <nav>
